// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api cloudProviderSecrets should create a cloudProvider dns secret 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/api/v1/namespaces/garden-foo/secrets",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
    {
      "apiVersion": "v1",
      "data": {
        "key": "bXlLZXk=",
        "secret": "bXlTZWNyZXQ=",
      },
      "kind": "Secret",
      "metadata": {
        "name": "new-dns1",
        "namespace": "garden-foo",
      },
      "type": "Opaque",
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/secretbindings",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
    {
      "apiVersion": "core.gardener.cloud/v1beta1",
      "kind": "SecretBinding",
      "metadata": {
        "labels": {
          "gardener.cloud/dnsProviderName": "foo-dns",
        },
        "name": "new-dns1",
        "namespace": "garden-foo",
      },
      "provider": {
        "type": "foo-dns",
      },
      "secretRef": {
        "name": "new-dns1",
        "namespace": "garden-foo",
      },
    },
  ],
]
`;

exports[`api cloudProviderSecrets should create a cloudProvider dns secret 2`] = `
{
  "data": {
    "key": "****************",
    "secret": "****************",
  },
  "metadata": {
    "dnsProviderName": "foo-dns",
    "hasCostObject": true,
    "name": "new-dns1",
    "namespace": "garden-foo",
    "projectName": "foo",
    "resourceVersion": "42",
    "secretRef": {
      "name": "new-dns1",
      "namespace": "garden-foo",
    },
  },
  "quotas": [],
}
`;

exports[`api cloudProviderSecrets should create a cloudProvider infrastructure secret 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/api/v1/namespaces/garden-foo/secrets",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
    {
      "apiVersion": "v1",
      "data": {
        "key": "bXlLZXk=",
        "secret": "bXlTZWNyZXQ=",
      },
      "kind": "Secret",
      "metadata": {
        "name": "new-infra1",
        "namespace": "garden-foo",
      },
      "type": "Opaque",
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/secretbindings",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
    {
      "apiVersion": "core.gardener.cloud/v1beta1",
      "kind": "SecretBinding",
      "metadata": {
        "labels": {
          "cloudprofile.garden.sapcloud.io/name": "infra3-profileName",
        },
        "name": "new-infra1",
        "namespace": "garden-foo",
      },
      "provider": {
        "type": "infra1",
      },
      "secretRef": {
        "name": "new-infra1",
        "namespace": "garden-foo",
      },
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
    {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": {
        "nonResourceAttributes": undefined,
        "resourceAttributes": {
          "group": "core.gardener.cloud",
          "name": "infra3-profileName",
          "resource": "cloudprofiles",
          "verb": "get",
        },
      },
    },
  ],
]
`;

exports[`api cloudProviderSecrets should create a cloudProvider infrastructure secret 2`] = `
{
  "data": {
    "key": "****************",
    "secret": "****************",
  },
  "metadata": {
    "cloudProfileName": "infra3-profileName",
    "cloudProviderKind": "infra3",
    "hasCostObject": true,
    "name": "new-infra1",
    "namespace": "garden-foo",
    "projectName": "foo",
    "resourceVersion": "42",
    "secretRef": {
      "name": "new-infra1",
      "namespace": "garden-foo",
    },
  },
  "quotas": [],
}
`;

exports[`api cloudProviderSecrets should delete an own cloudProvider secret 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/secretbindings/foo-infra3",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
    {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": {
        "nonResourceAttributes": undefined,
        "resourceAttributes": {
          "group": "core.gardener.cloud",
          "namespace": "garden-foo",
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "delete",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/secretbindings/foo-infra3",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "delete",
      ":path": "/api/v1/namespaces/garden-foo/secrets/secret2",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
]
`;

exports[`api cloudProviderSecrets should delete an own cloudProvider secret 2`] = `
{
  "metadata": {
    "name": "foo-infra3",
    "namespace": "garden-foo",
    "secretRef": {
      "name": "secret2",
      "namespace": "garden-foo",
    },
  },
}
`;

exports[`api cloudProviderSecrets should not delete a shared cloudProvider secret 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/secretbindings/trial-infra1",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
]
`;

exports[`api cloudProviderSecrets should not delete a shared cloudProvider secret 2`] = `
{
  "code": 422,
  "details": Any<Object>,
  "message": "Remove allowed only for secrets in own namespace",
  "reason": "Unprocessable Entity",
  "status": "Failure",
}
`;

exports[`api cloudProviderSecrets should not delete cloudProvider secret if referenced by shoot 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/secretbindings/foo-infra1",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
    {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": {
        "nonResourceAttributes": undefined,
        "resourceAttributes": {
          "group": "core.gardener.cloud",
          "namespace": "garden-foo",
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
]
`;

exports[`api cloudProviderSecrets should not delete cloudProvider secret if referenced by shoot 2`] = `
{
  "code": 422,
  "details": Any<Object>,
  "message": "Only secrets not referened by any shoot can be deleted",
  "reason": "Unprocessable Entity",
  "status": "Failure",
}
`;

exports[`api cloudProviderSecrets should not patch a shared cloudProvider secret 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/secretbindings/trial-infra1",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
]
`;

exports[`api cloudProviderSecrets should not patch a shared cloudProvider secret 2`] = `
{
  "code": 422,
  "details": Any<Object>,
  "message": "Patch allowed only for secrets in own namespace",
  "reason": "Unprocessable Entity",
  "status": "Failure",
}
`;

exports[`api cloudProviderSecrets should patch an own cloudProvider secret 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/secretbindings/foo-infra3",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/api/v1/namespaces/garden-foo/secrets/secret2",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
      "content-type": "application/json-patch+json",
    },
    [
      {
        "op": "replace",
        "path": "/data",
        "value": {
          "key": "bXlLZXk=",
          "secret": "bXlTZWNyZXQ=",
        },
      },
    ],
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
    {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": {
        "nonResourceAttributes": undefined,
        "resourceAttributes": {
          "group": "core.gardener.cloud",
          "name": "infra3-profileName",
          "resource": "cloudprofiles",
          "verb": "get",
        },
      },
    },
  ],
]
`;

exports[`api cloudProviderSecrets should patch an own cloudProvider secret 2`] = `
{
  "data": {},
  "metadata": {
    "cloudProfileName": "infra3-profileName",
    "cloudProviderKind": "infra3",
    "hasCostObject": true,
    "name": "foo-infra3",
    "namespace": "garden-foo",
    "projectName": "foo",
    "secretRef": {
      "name": "secret2",
      "namespace": "garden-foo",
    },
  },
  "quotas": [
    {
      "metadata": {
        "name": "foo-quota1",
        "namespace": "garden-foo",
        "uid": 2,
      },
      "spec": {
        "clusterLifetimeDays": 14,
        "metrics": {
          "cpu": "200",
        },
        "scope": {
          "apiVersion": "v1",
          "kind": "Secret",
        },
      },
    },
    {
      "metadata": {
        "name": "foo-quota2",
        "namespace": "garden-foo",
        "uid": 3,
      },
      "spec": {
        "clusterLifetimeDays": 14,
        "metrics": {
          "cpu": "200",
        },
        "scope": {
          "apiVersion": "v1",
          "kind": "Secret",
        },
      },
    },
  ],
}
`;

exports[`api cloudProviderSecrets should return no cloudProvider secrets 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
    {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": {
        "nonResourceAttributes": undefined,
        "resourceAttributes": {
          "group": "core.gardener.cloud",
          "resource": "cloudprofiles",
          "verb": "list",
        },
      },
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/api/v1/namespaces/garden-baz/secrets?labelSelector=reference.gardener.cloud%2Fsecretbinding%3Dtrue",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-baz/secretbindings",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
]
`;

exports[`api cloudProviderSecrets should return no cloudProvider secrets 2`] = `[]`;

exports[`api cloudProviderSecrets should return three cloudProvider secrets 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
    {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": {
        "nonResourceAttributes": undefined,
        "resourceAttributes": {
          "group": "core.gardener.cloud",
          "resource": "cloudprofiles",
          "verb": "list",
        },
      },
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/api/v1/namespaces/garden-foo/secrets?labelSelector=reference.gardener.cloud%2Fsecretbinding%3Dtrue",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/secretbindings",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
]
`;

exports[`api cloudProviderSecrets should return three cloudProvider secrets 2`] = `
[
  {
    "data": {
      "key": "****************",
      "secret": "****************",
    },
    "metadata": {
      "cloudProfileName": "infra1-profileName",
      "cloudProviderKind": "infra1",
      "hasCostObject": true,
      "name": "foo-infra1",
      "namespace": "garden-foo",
      "projectName": "foo",
      "secretRef": {
        "name": "secret1",
        "namespace": "garden-foo",
      },
    },
    "quotas": [
      {
        "metadata": {
          "name": "foo-quota1",
          "namespace": "garden-foo",
          "uid": 2,
        },
        "spec": {
          "clusterLifetimeDays": 14,
          "metrics": {
            "cpu": "200",
          },
          "scope": {
            "apiVersion": "v1",
            "kind": "Secret",
          },
        },
      },
      {
        "metadata": {
          "name": "foo-quota2",
          "namespace": "garden-foo",
          "uid": 3,
        },
        "spec": {
          "clusterLifetimeDays": 14,
          "metrics": {
            "cpu": "200",
          },
          "scope": {
            "apiVersion": "v1",
            "kind": "Secret",
          },
        },
      },
    ],
  },
  {
    "data": {
      "key": "****************",
      "secret": "****************",
    },
    "metadata": {
      "cloudProfileName": "infra3-profileName",
      "cloudProviderKind": "infra3",
      "hasCostObject": true,
      "name": "foo-infra3",
      "namespace": "garden-foo",
      "projectName": "foo",
      "secretRef": {
        "name": "secret2",
        "namespace": "garden-foo",
      },
    },
    "quotas": [
      {
        "metadata": {
          "name": "foo-quota1",
          "namespace": "garden-foo",
          "uid": 2,
        },
        "spec": {
          "clusterLifetimeDays": 14,
          "metrics": {
            "cpu": "200",
          },
          "scope": {
            "apiVersion": "v1",
            "kind": "Secret",
          },
        },
      },
      {
        "metadata": {
          "name": "foo-quota2",
          "namespace": "garden-foo",
          "uid": 3,
        },
        "spec": {
          "clusterLifetimeDays": 14,
          "metrics": {
            "cpu": "200",
          },
          "scope": {
            "apiVersion": "v1",
            "kind": "Secret",
          },
        },
      },
    ],
  },
  {
    "metadata": {
      "cloudProfileName": "infra1-profileName",
      "cloudProviderKind": "infra1",
      "hasCostObject": true,
      "name": "trial-infra1",
      "namespace": "garden-foo",
      "projectName": "trial",
      "secretRef": {
        "name": "trial-secret",
        "namespace": "garden-trial",
      },
    },
    "quotas": [
      {
        "metadata": {
          "name": "foo-quota1",
          "namespace": "garden-foo",
          "uid": 2,
        },
        "spec": {
          "clusterLifetimeDays": 14,
          "metrics": {
            "cpu": "200",
          },
          "scope": {
            "apiVersion": "v1",
            "kind": "Secret",
          },
        },
      },
      {
        "metadata": {
          "name": "foo-quota2",
          "namespace": "garden-foo",
          "uid": 3,
        },
        "spec": {
          "clusterLifetimeDays": 14,
          "metrics": {
            "cpu": "200",
          },
          "scope": {
            "apiVersion": "v1",
            "kind": "Secret",
          },
        },
      },
    ],
  },
]
`;
